# AiChatter

./: .gitignore  README.md
docs/: m5sticks3.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  audio_hal.c  audio_hal.h  battery_monitor.c  battery_monitor.h  config.h  idf_component.yml  lcd_display.c  lcd_display.h  main.c  state_machine.c  state_machine.h  ws_client.c  ws_client.h
server/: .env.example  aichatter.py  audio_pipeline.py  character.example.yaml  character.yaml  character_catalog.py  chat_engine.py  cli.py  config.py  local_asr.py  local_llm.py  local_tts.py  main.py  monitor.py  prompt.example.yaml  pyproject.toml  sdk.py  session_manager.py  skills.py  subagent_llm.py  tool_factory.py
server/configs/: character.example.yaml  llm.example.yaml  model.example.yaml  prompt.example.yaml
server/src/ai_chatter/: _paths.py  aichatter.py  audio_pipeline.py  battery.py  character_catalog.py  chat_engine.py  cli.py  config.py  local_asr.py  local_llm.py  local_tts.py  main.py  sdk.py  skills.py  speaker_id.py  subagent_llm.py  tool_factory.py  voice_cli.py
server/src/ai_chatter/subagent/: __init__.py  job_manager.py  runner.py  tool_adapter.py
server/src/ai_chatter/tools/: __init__.py  base.py  battery.py  conversation_memory.py  display_control.py  goal_management.py  notification.py  registry.py  search.py  sleep_control.py  speaker_registration.py  subagent_research.py  voice_control.py
server/subagent/: __init__.py  job_manager.py  models.py  runner.py  tool_adapter.py
server/tests/: eval_speaker_id.py
server/tools/: __init__.py  base.py  conversation_memory.py  display_control.py  notification.py  registry.py  search.py  sleep_control.py  speaker_registration.py  subagent_research.py  voice_control.py
