[project]
name = "ai-chatter-server"
version = "0.1.0"
description = "AiChatter - M5StickS3 常時会話AIアシスタント サーバー"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "mlx-audio[stt,tts]>=0.3.1",
    "openai>=1.30.0",
    "numpy>=1.26.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.13.0",
    "pyserial>=3.5",
    "esptool>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
